<resources>
    <string name="app_name">SqlLiteEjem</string>
    <string name="action_settings">Settings</string>
    <string name="Crear">Crear</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Buscar">Buscar</string>
    <string name="title_activity_create">Crear Usuario</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Direc">Direccion</string>
    <string name="Edad">Edad</string>
    <string name="Vacios">Existen Campos vacios</string>
    <string name="Guardado">Registro Guardado</string>
    <string name="Borrado">Registro Borrado</string>
    <string name="ErrorID">Ingrese un ID</string>
    <string name="title_activity_editar">Actualizar Usuario</string>
    <string name="AvisoUpdate">Ingrese el ID del registro que desea actualizar</string>
    <string name="Actializado">Registro Actualizado</string>
</resources>
