<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_editar"
    tools:context="com.example.michel.sqlliteejem.EditarActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/idU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="ID"
            android:ems="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/AvisoUpdate"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/nombreU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:ems="12" />

        <EditText
            android:id="@+id/apellidoU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Apellido"
            android:ems="12" />

        <EditText
            android:id="@+id/direccionU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Direc"
            android:ems="12" />

        <EditText
            android:id="@+id/edadU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/Edad"
            android:ems="12" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/namiydouglas" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"
            android:onClick="update"/>


    </LinearLayout>

</LinearLayout>

