<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ListView
        android:id="@+id/lstVAprendis"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Crear"
            android:layout_weight="1"
            android:onClick="LanzadorCreate"/>



        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Actualizar"
            android:layout_weight="1"
            android:onClick="LanzadorUpdate"/>


        <Button
            android:id="@+id/btnSearchAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cargar Todo"
            android:onClick="mostrarTodo"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtcampo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="ID"
            android:ems="5" />

        <Button
            android:id="@+id/btnDeled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Eliminar"
            android:layout_weight="1"
            android:onClick="delet"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Buscar"
            android:onClick="search"/>



    </LinearLayout>


</LinearLayout>
